<?xml version="1.0"?>
<package format="2">
  <name>mouse_callback</name>
  <version>3.0.0</version>
  <description>The mouse_callback package</description>

  <maintainer email="2217210958@qq.com">Ksals</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nodelet</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>pluginlib</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
